# azcam

./: .gitignore  .readthedocs.yaml  404.html  LICENSE  MANIFEST.in  README.md  activate_venv.bat  azcam.code-workspace  git_pull.bat  git_push.bat  index.html  pyproject.toml  requirements.txt  setup.py  sitemap.xml
ORG_index/: index.html
api_console/: index.html
azcam/: __init__.py  __main__.py  api.py  api_azcam.py  api_console.py  api_server.py  baseobject.py  cli.py  cmdserver.py  config_example.py  configuration.py  console.py  console_mock.py  console_tools.py  controller.py  database.py  database_console.py  database_server.py  display.py  example_console_config.py  example_server_config.py  exceptions.py  exposure.py  filename.py  fits.py  focalplane.py  genpars.py  header.py  image.py  image_focalplane.py  image_headers.py  image_io.py  image_send.py  index.html  instrument.py  logger.py  logging.py  logging_server_tcp.py  mock.py  monitorinterface.py  (+27 more)
baseobject/: index.html
classes/: index.html
commands/: index.html
console_tools/: index.html
controller/: index.html
css/: custom.css
database/: index.html
display/: index.html
docs/: .readthedocs.yaml  .readthedocs.yml  Makefile  api_console.md  conf.py  controller.md  display.md  exposure.md  fits.md  image.md  index.md  instrument.md  make.bat  make_html.bat  make_pdoc.bat  make_pdoc3.bat  mkdocs.yml  mkdocs_build.bat  mkdocs_build_deploy.bat  mkdocs_deploy.bat  programming.md  readme.md  readthedocs.yml  report.md  requirements.txt  telescope.md  tempcon.md  testers.md  udpinterface.txt  utils.md
exposure/: index.html
fits/: index.html
focalplane/: index.html
header/: index.html
image/: index.html
instrument/: index.html
plot/: index.html
programming/: index.html
search/: search_index.json
support/: environs.txt  install_azcam_environments_edit_mode.sh  monitor_time_sync.py  set_environs.bat  set_environs.sh  setup_time_sync.ps1  start_console_example.bat  start_observe.bat  start_server_example.bat
suppport/: start_imageserver.bat  start_imageserver.csh  start_observe.bat
telescope/: index.html
tempcon/: index.html
tests/: __init__.py
tools/: index.html
utils/: index.html
(+826 files in other folders)
