[project]
name = "azcam"
version = "26.0.0"
description = "Acquisition and analysis package for scientific imaging"
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["ccd", "imaging", "astronomy", "sensors"]
authors = [{ name = "Michael Lesser" }, { email = "mlesser@arizona.edu" }]
dependencies = [
    "loguru",
    "numpy",
    "astropy",
    "psutil",
    "fastapi",
    "uvicorn",
    "jinja2",
    "dash",
    "dash-bootstrap-components",
    "dash_daq",
    "pandas",
]
requires-python = ">= 3.10"

[project.urls]
Documentation = "https://azcam.readthedocs.io/"
Repository = "https://github.com/mplesser/azcam/"
