[project]
name = "azcam"
version = "26.0.2"
description = "Acquisition and analysis package for scientific imaging"
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["ccd", "imaging", "astronomy", "sensors"]
authors = [{ name = "Michael Lesser" }, { email = "mlesser@arizona.edu" }]
dependencies = [
    "loguru",
    "numpy",
    "astropy",
    "psutil",
    "fastapi",
    "uvicorn",
    "jinja2",
    "pandas",
]
requires-python = ">= 3.10"

[project.urls]
Documentation = "https://azcam.readthedocs.io/"
Repository = "https://github.com/mplesser/azcam/"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
